# tar-template

./: README.md
app/: Dockerfile  app.py  docker_build.sh  pyproject.toml
terraform/: .gitignore  main.tf  terraform.tfvars.template  variable.tf
terraform/modules/apprunner/: main.tf  variable.tf
terraform/modules/ecr/: main.tf
terraform/modules/iam/: main.tf  variable.tf
