[tool.poetry]
name = "terraform_app_runner_test_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
pandas = "^1.4.3"
boto3 = "1.24.29"
s3fs = "0.4.2"
fsspec = "2022.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
